--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,32 +1,31 @@
-# Frontend Dockerfile
-FROM node:18-alpine as build
+# Build Stage
+FROM node:20-alpine as build
 
-# Set working directory
 WORKDIR /app
 
 # Copy package files
 COPY package*.json ./
-
-# Install dependencies
 RUN npm ci
 
-# Copy project files
+# Copy source code
 COPY . .
 
-# Build the application
+# Build the app
+# Note: VITE_API_URL should be available as an ARG or ENV during build
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
 RUN npm run build
 
-# Production stage
+# Production Stage
 FROM nginx:alpine
 
-# Copy built assets from build stage
-COPY --from=build /app/dist /usr/share/nginx/html
-
-# Copy nginx configuration
+# Copy nginx config
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expose port
+# Copy build artifacts
+COPY --from=build /app/dist /usr/share/nginx/html
+
 EXPOSE 80
 
-# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
