--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,16 +6,9 @@ server {
 
     # Gzip compression
     gzip on;
-    gzip_vary on;
-    gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/x-javascript application/xml+rss application/json;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-
-    # Handle React Router
+    # SPA Routing: Redirect all 404s to index.html
     location / {
         try_files $uri $uri/ /index.html;
     }
@@ -23,20 +16,6 @@ server {
     # Cache static assets
     location /assets/ {
         expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # Proxy API requests to backend
-    location /api/ {
-        proxy_pass http://backend:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Proxy media files
-    location /media/ {
-        proxy_pass http://backend:8000;
+        add_header Cache-Control "public, no-transform";
     }
 }
