--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -20,8 +20,8 @@ RUN npm run build
 # Production Stage
 FROM nginx:alpine
 
-# Copy nginx config template (enables envsubst for $PORT)
-COPY nginx.conf.template /etc/nginx/templates/default.conf.template
+# Copy nginx config
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy build artifacts
 COPY --from=build /app/dist /usr/share/nginx/html
